tests/sksl/errors/golden/StaticSwitchConditionalBreak.glsl
### Compilation failed:

error: 3: static switch contains non-static conditional break
1 error
